// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`golden calculation cases 1 diesel van, regional, Berlin, roof, regular goods 1`] = `
{
  "assumptionSetVersion": "2026.1",
  "formulaVersion": "1.0.0",
  "inputSources": {
    "averageDailyDistanceKm": "PROVIDED",
    "cargoType": "PROVIDED",
    "countryCode": "PROVIDED",
    "energyConsumptionKwhPer100km": "PRESET",
    "engineType": "PROVIDED",
    "idleHoursPerDay": "PRESET",
    "latitude": "PROVIDED",
    "longitude": "PROVIDED",
    "maxRoofLoadKg": "PRESET",
    "operatingMonthsPerYear": "PROVIDED",
    "parkingType": "PROVIDED",
    "payloadReserveKg": "PRESET",
    "quantity": "PROVIDED",
    "solarPanelCapacityKw": "PRESET",
    "solarPanelPlacement": "PROVIDED",
    "vehicleType": "PROVIDED",
    "winterUsage": "PROVIDED",
  },
  "scenarios": {
    "OPTIMISTIC": {
      "annualMaintenanceCents": 2250,
      "annualSavingsCents": 122342,
      "co2AvoidedKgPerYear": 1530.832745062098,
      "cumulativeSavingsSeriesCents": [
        -270000,
        -149908,
        -30168,
        121220,
        240258,
        358946,
        509286,
        627278,
        712924,
        862225,
        979181,
      ],
      "energy": {
        "auxiliaryKwh": 1211.2647627149995,
        "coolingKwh": 0,
        "directChargingKwh": 0,
        "idlingKwh": 0,
        "producedKwh": 1211.2647627149995,
        "wastedKwh": 0,
      },
      "kind": "OPTIMISTIC",
      "oneTimeCostAfterSubsidyCents": 270000,
      "oneTimeCostBeforeSubsidyCents": 270000,
      "paybackMonths": 26.391312389357147,
      "resolvedInput": {
        "averageDailyDistanceKm": 150,
        "cargoType": "REGULAR",
        "coolingUnitType": undefined,
        "countryCode": "DE",
        "energyConsumptionKwhPer100km": 36,
        "engineType": "DIESEL",
        "idleHoursPerDay": 0,
        "latitude": 52.52,
        "longitude": 13.405,
        "maxRoofLoadKg": 200,
        "operatingMonthsPerYear": 12,
        "parkingType": "MIXED",
        "payloadReserveKg": 150,
        "quantity": 1,
        "solarPanelCapacityKw": 1.5,
        "solarPanelPlacement": "ROOF",
        "vehicleType": "VAN",
        "winterUsage": true,
      },
      "savingsByTypeCents": {
        "ALTERNATOR_FUEL": 117542,
        "COOLING_UNIT_FUEL": 0,
        "DIRECT_CHARGING": 0,
        "FEWER_BATTERY_BREAKDOWNS": 4800,
        "LESS_IDLING": 0,
      },
      "subsidyCents": 0,
      "tenYearNetGainCents": 979181,
      "yearlySolarEnergyKwh": 1211.2647627149995,
    },
    "PESSIMISTIC": {
      "annualMaintenanceCents": 4800,
      "annualSavingsCents": 20033,
      "co2AvoidedKgPerYear": 414.11701720730883,
      "cumulativeSavingsSeriesCents": [
        -280000,
        -264767,
        -249694,
        -234780,
        -220024,
        -205425,
        -190981,
        -176691,
        -162553,
        -148567,
        -134731,
      ],
      "energy": {
        "auxiliaryKwh": 452.95322688,
        "coolingKwh": 0,
        "directChargingKwh": 0,
        "idlingKwh": 0,
        "producedKwh": 452.95322688,
        "wastedKwh": 0,
      },
      "kind": "PESSIMISTIC",
      "oneTimeCostAfterSubsidyCents": 280000,
      "oneTimeCostBeforeSubsidyCents": 280000,
      "paybackMonths": 244.28613376835236,
      "resolvedInput": {
        "averageDailyDistanceKm": 150,
        "cargoType": "REGULAR",
        "coolingUnitType": undefined,
        "countryCode": "DE",
        "energyConsumptionKwhPer100km": 22,
        "engineType": "DIESEL",
        "idleHoursPerDay": 0,
        "latitude": 52.52,
        "longitude": 13.405,
        "maxRoofLoadKg": 100,
        "operatingMonthsPerYear": 12,
        "parkingType": "MIXED",
        "payloadReserveKg": 50,
        "quantity": 1,
        "solarPanelCapacityKw": 0.8,
        "solarPanelPlacement": "ROOF",
        "vehicleType": "VAN",
        "winterUsage": true,
      },
      "savingsByTypeCents": {
        "ALTERNATOR_FUEL": 20033,
        "COOLING_UNIT_FUEL": 0,
        "DIRECT_CHARGING": 0,
        "FEWER_BATTERY_BREAKDOWNS": 0,
        "LESS_IDLING": 0,
      },
      "subsidyCents": 0,
      "tenYearNetGainCents": -134731,
      "yearlySolarEnergyKwh": 452.95322688,
    },
    "REALISTIC": {
      "annualMaintenanceCents": 3600,
      "annualSavingsCents": 54134,
      "co2AvoidedKgPerYear": 880.472322680816,
      "cumulativeSavingsSeriesCents": [
        -300000,
        -249466,
        -199196,
        -149190,
        -79445,
        -29961,
        -736,
        48231,
        116942,
        165397,
        213598,
      ],
      "energy": {
        "auxiliaryKwh": 839.5765489800001,
        "coolingKwh": 0,
        "directChargingKwh": 0,
        "idlingKwh": 0,
        "producedKwh": 839.5765489800001,
        "wastedKwh": 0,
      },
      "kind": "REALISTIC",
      "oneTimeCostAfterSubsidyCents": 300000,
      "oneTimeCostBeforeSubsidyCents": 300000,
      "paybackMonths": 72.18036636918741,
      "resolvedInput": {
        "averageDailyDistanceKm": 150,
        "cargoType": "REGULAR",
        "coolingUnitType": undefined,
        "countryCode": "DE",
        "energyConsumptionKwhPer100km": 28,
        "engineType": "DIESEL",
        "idleHoursPerDay": 0,
        "latitude": 52.52,
        "longitude": 13.405,
        "maxRoofLoadKg": 150,
        "operatingMonthsPerYear": 12,
        "parkingType": "MIXED",
        "payloadReserveKg": 100,
        "quantity": 1,
        "solarPanelCapacityKw": 1.2,
        "solarPanelPlacement": "ROOF",
        "vehicleType": "VAN",
        "winterUsage": true,
      },
      "savingsByTypeCents": {
        "ALTERNATOR_FUEL": 52884,
        "COOLING_UNIT_FUEL": 0,
        "DIRECT_CHARGING": 0,
        "FEWER_BATTERY_BREAKDOWNS": 1250,
        "LESS_IDLING": 0,
      },
      "subsidyCents": 0,
      "tenYearNetGainCents": 213598,
      "yearlySolarEnergyKwh": 839.5765489800001,
    },
  },
}
`;

exports[`golden calculation cases 1 electric van, short, Paris, roof 1`] = `
{
  "assumptionSetVersion": "2026.1",
  "formulaVersion": "1.0.0",
  "inputSources": {
    "averageDailyDistanceKm": "PROVIDED",
    "cargoType": "PROVIDED",
    "countryCode": "PROVIDED",
    "energyConsumptionKwhPer100km": "PRESET",
    "engineType": "PROVIDED",
    "idleHoursPerDay": "PRESET",
    "latitude": "PROVIDED",
    "longitude": "PROVIDED",
    "maxRoofLoadKg": "PRESET",
    "operatingMonthsPerYear": "PROVIDED",
    "parkingType": "PROVIDED",
    "payloadReserveKg": "PRESET",
    "quantity": "PROVIDED",
    "solarPanelCapacityKw": "PRESET",
    "solarPanelPlacement": "PROVIDED",
    "vehicleType": "PROVIDED",
    "winterUsage": "PROVIDED",
  },
  "scenarios": {
    "OPTIMISTIC": {
      "annualMaintenanceCents": 2250,
      "annualSavingsCents": 34340,
      "co2AvoidedKgPerYear": 70.4773828442775,
      "cumulativeSavingsSeriesCents": [
        -270000,
        -237910,
        -205909,
        -141996,
        -110171,
        -78434,
        -14785,
        16777,
        16252,
        79640,
        110942,
      ],
      "energy": {
        "auxiliaryKwh": 0,
        "coolingKwh": 0,
        "directChargingKwh": 1322.2773516749999,
        "idlingKwh": 0,
        "producedKwh": 1322.2773516749999,
        "wastedKwh": 0,
      },
      "kind": "OPTIMISTIC",
      "oneTimeCostAfterSubsidyCents": 270000,
      "oneTimeCostBeforeSubsidyCents": 270000,
      "paybackMonths": 77.62131677333502,
      "resolvedInput": {
        "averageDailyDistanceKm": 60,
        "cargoType": "REGULAR",
        "coolingUnitType": undefined,
        "countryCode": "FR",
        "energyConsumptionKwhPer100km": 36,
        "engineType": "ELECTRIC",
        "idleHoursPerDay": 0,
        "latitude": 48.8566,
        "longitude": 2.3522,
        "maxRoofLoadKg": 200,
        "operatingMonthsPerYear": 12,
        "parkingType": "MIXED",
        "payloadReserveKg": 150,
        "quantity": 1,
        "solarPanelCapacityKw": 1.5,
        "solarPanelPlacement": "ROOF",
        "vehicleType": "VAN",
        "winterUsage": true,
      },
      "savingsByTypeCents": {
        "ALTERNATOR_FUEL": 0,
        "COOLING_UNIT_FUEL": 0,
        "DIRECT_CHARGING": 29540,
        "FEWER_BATTERY_BREAKDOWNS": 4800,
        "LESS_IDLING": 0,
      },
      "subsidyCents": 0,
      "tenYearNetGainCents": 110942,
      "yearlySolarEnergyKwh": 1322.2773516749999,
    },
    "PESSIMISTIC": {
      "annualMaintenanceCents": 4800,
      "annualSavingsCents": 9635,
      "co2AvoidedKgPerYear": 20.0520040536,
      "cumulativeSavingsSeriesCents": [
        -280000,
        -275165,
        -270407,
        -265726,
        -261121,
        -256591,
        -252135,
        -247753,
        -243445,
        -239210,
        -235047,
      ],
      "energy": {
        "auxiliaryKwh": 0,
        "coolingKwh": 0,
        "directChargingKwh": 495.1112112,
        "idlingKwh": 0,
        "producedKwh": 495.1112112,
        "wastedKwh": 0,
      },
      "kind": "PESSIMISTIC",
      "oneTimeCostAfterSubsidyCents": 280000,
      "oneTimeCostBeforeSubsidyCents": 280000,
      "paybackMonths": null,
      "resolvedInput": {
        "averageDailyDistanceKm": 60,
        "cargoType": "REGULAR",
        "coolingUnitType": undefined,
        "countryCode": "FR",
        "energyConsumptionKwhPer100km": 22,
        "engineType": "ELECTRIC",
        "idleHoursPerDay": 0,
        "latitude": 48.8566,
        "longitude": 2.3522,
        "maxRoofLoadKg": 100,
        "operatingMonthsPerYear": 12,
        "parkingType": "MIXED",
        "payloadReserveKg": 50,
        "quantity": 1,
        "solarPanelCapacityKw": 0.8,
        "solarPanelPlacement": "ROOF",
        "vehicleType": "VAN",
        "winterUsage": true,
      },
      "savingsByTypeCents": {
        "ALTERNATOR_FUEL": 0,
        "COOLING_UNIT_FUEL": 0,
        "DIRECT_CHARGING": 9635,
        "FEWER_BATTERY_BREAKDOWNS": 0,
        "LESS_IDLING": 0,
      },
      "subsidyCents": 0,
      "tenYearNetGainCents": -235047,
      "yearlySolarEnergyKwh": 495.1112112,
    },
    "REALISTIC": {
      "annualMaintenanceCents": 3600,
      "annualSavingsCents": 20573,
      "co2AvoidedKgPerYear": 41.360994873,
      "cumulativeSavingsSeriesCents": [
        -300000,
        -283027,
        -266150,
        -249370,
        -212685,
        -196095,
        -199600,
        -183199,
        -146892,
        -130678,
        -114557,
      ],
      "energy": {
        "auxiliaryKwh": 0,
        "coolingKwh": 0,
        "directChargingKwh": 917.09523,
        "idlingKwh": 0,
        "producedKwh": 917.09523,
        "wastedKwh": 0,
      },
      "kind": "REALISTIC",
      "oneTimeCostAfterSubsidyCents": 300000,
      "oneTimeCostBeforeSubsidyCents": 300000,
      "paybackMonths": 191.9173553719008,
      "resolvedInput": {
        "averageDailyDistanceKm": 60,
        "cargoType": "REGULAR",
        "coolingUnitType": undefined,
        "countryCode": "FR",
        "energyConsumptionKwhPer100km": 28,
        "engineType": "ELECTRIC",
        "idleHoursPerDay": 0,
        "latitude": 48.8566,
        "longitude": 2.3522,
        "maxRoofLoadKg": 150,
        "operatingMonthsPerYear": 12,
        "parkingType": "MIXED",
        "payloadReserveKg": 100,
        "quantity": 1,
        "solarPanelCapacityKw": 1.2,
        "solarPanelPlacement": "ROOF",
        "vehicleType": "VAN",
        "winterUsage": true,
      },
      "savingsByTypeCents": {
        "ALTERNATOR_FUEL": 0,
        "COOLING_UNIT_FUEL": 0,
        "DIRECT_CHARGING": 19323,
        "FEWER_BATTERY_BREAKDOWNS": 1250,
        "LESS_IDLING": 0,
      },
      "subsidyCents": 0,
      "tenYearNetGainCents": -114557,
      "yearlySolarEnergyKwh": 917.09523,
    },
  },
}
`;

exports[`golden calculation cases 1 long-haul truck, long, idles often, Warsaw, roof 1`] = `
{
  "assumptionSetVersion": "2026.1",
  "formulaVersion": "1.0.0",
  "inputSources": {
    "averageDailyDistanceKm": "PROVIDED",
    "cargoType": "PROVIDED",
    "countryCode": "PROVIDED",
    "energyConsumptionKwhPer100km": "PRESET",
    "engineType": "PROVIDED",
    "idleHoursPerDay": "PROVIDED",
    "latitude": "PROVIDED",
    "longitude": "PROVIDED",
    "maxRoofLoadKg": "PRESET",
    "operatingMonthsPerYear": "PROVIDED",
    "parkingType": "PROVIDED",
    "payloadReserveKg": "PRESET",
    "quantity": "PROVIDED",
    "solarPanelCapacityKw": "PRESET",
    "solarPanelPlacement": "PROVIDED",
    "vehicleType": "PROVIDED",
    "winterUsage": "PROVIDED",
  },
  "scenarios": {
    "OPTIMISTIC": {
      "annualMaintenanceCents": 6000,
      "annualSavingsCents": 1235954,
      "co2AvoidedKgPerYear": 17353.735670821297,
      "cumulativeSavingsSeriesCents": [
        -720000,
        509954,
        1739037,
        2999253,
        4226604,
        5453092,
        6710720,
        7935491,
        9127407,
        10382471,
        11604685,
      ],
      "energy": {
        "auxiliaryKwh": 497.8765109399992,
        "coolingKwh": 0,
        "directChargingKwh": 0,
        "idlingKwh": 2737.5,
        "producedKwh": 3235.376510939999,
        "wastedKwh": 0,
      },
      "kind": "OPTIMISTIC",
      "oneTimeCostAfterSubsidyCents": 720000,
      "oneTimeCostBeforeSubsidyCents": 720000,
      "paybackMonths": 7.024652954500737,
      "resolvedInput": {
        "averageDailyDistanceKm": 400,
        "cargoType": "REGULAR",
        "coolingUnitType": undefined,
        "countryCode": "PL",
        "energyConsumptionKwhPer100km": 125,
        "engineType": "DIESEL",
        "idleHoursPerDay": 3,
        "latitude": 52.2297,
        "longitude": 21.0122,
        "maxRoofLoadKg": 600,
        "operatingMonthsPerYear": 12,
        "parkingType": "MIXED",
        "payloadReserveKg": 450,
        "quantity": 1,
        "solarPanelCapacityKw": 4,
        "solarPanelPlacement": "ROOF",
        "vehicleType": "TRUCK",
        "winterUsage": true,
      },
      "savingsByTypeCents": {
        "ALTERNATOR_FUEL": 44641,
        "COOLING_UNIT_FUEL": 0,
        "DIRECT_CHARGING": 0,
        "FEWER_BATTERY_BREAKDOWNS": 4800,
        "LESS_IDLING": 1186513,
      },
      "subsidyCents": 0,
      "tenYearNetGainCents": 11604685,
      "yearlySolarEnergyKwh": 3235.376510939999,
    },
    "PESSIMISTIC": {
      "annualMaintenanceCents": 12000,
      "annualSavingsCents": 332660,
      "co2AvoidedKgPerYear": 6932.132472878185,
      "cumulativeSavingsSeriesCents": [
        -700000,
        -379340,
        -59083,
        260774,
        580235,
        899303,
        1217981,
        1536272,
        1854179,
        2171705,
        2488854,
      ],
      "energy": {
        "auxiliaryKwh": 271.4978483999997,
        "coolingKwh": 0,
        "directChargingKwh": 0,
        "idlingKwh": 876.0000000000001,
        "producedKwh": 1147.4978483999998,
        "wastedKwh": 0,
      },
      "kind": "PESSIMISTIC",
      "oneTimeCostAfterSubsidyCents": 700000,
      "oneTimeCostBeforeSubsidyCents": 700000,
      "paybackMonths": 26.216603044485506,
      "resolvedInput": {
        "averageDailyDistanceKm": 400,
        "cargoType": "REGULAR",
        "coolingUnitType": undefined,
        "countryCode": "PL",
        "energyConsumptionKwhPer100km": 96.3,
        "engineType": "DIESEL",
        "idleHoursPerDay": 3,
        "latitude": 52.2297,
        "longitude": 21.0122,
        "maxRoofLoadKg": 200,
        "operatingMonthsPerYear": 12,
        "parkingType": "MIXED",
        "payloadReserveKg": 150,
        "quantity": 1,
        "solarPanelCapacityKw": 2,
        "solarPanelPlacement": "ROOF",
        "vehicleType": "TRUCK",
        "winterUsage": true,
      },
      "savingsByTypeCents": {
        "ALTERNATOR_FUEL": 11912,
        "COOLING_UNIT_FUEL": 0,
        "DIRECT_CHARGING": 0,
        "FEWER_BATTERY_BREAKDOWNS": 0,
        "LESS_IDLING": 320748,
      },
      "subsidyCents": 0,
      "tenYearNetGainCents": 2488854,
      "yearlySolarEnergyKwh": 1147.4978483999998,
    },
    "REALISTIC": {
      "annualMaintenanceCents": 9000,
      "annualSavingsCents": 518290,
      "co2AvoidedKgPerYear": 9416.31836515866,
      "cumulativeSavingsSeriesCents": [
        -750000,
        -240710,
        267971,
        776047,
        1303520,
        1810393,
        2296670,
        2802353,
        3327446,
        3831951,
        4335871,
      ],
      "energy": {
        "auxiliaryKwh": 471.64584600000035,
        "coolingKwh": 0,
        "directChargingKwh": 0,
        "idlingKwh": 1642.5,
        "producedKwh": 2114.1458460000003,
        "wastedKwh": 0,
      },
      "kind": "REALISTIC",
      "oneTimeCostAfterSubsidyCents": 750000,
      "oneTimeCostBeforeSubsidyCents": 750000,
      "paybackMonths": 17.678450738281946,
      "resolvedInput": {
        "averageDailyDistanceKm": 400,
        "cargoType": "REGULAR",
        "coolingUnitType": undefined,
        "countryCode": "PL",
        "energyConsumptionKwhPer100km": 110,
        "engineType": "DIESEL",
        "idleHoursPerDay": 3,
        "latitude": 52.2297,
        "longitude": 21.0122,
        "maxRoofLoadKg": 400,
        "operatingMonthsPerYear": 12,
        "parkingType": "MIXED",
        "payloadReserveKg": 300,
        "quantity": 1,
        "solarPanelCapacityKw": 3,
        "solarPanelPlacement": "ROOF",
        "vehicleType": "TRUCK",
        "winterUsage": true,
      },
      "savingsByTypeCents": {
        "ALTERNATOR_FUEL": 27159,
        "COOLING_UNIT_FUEL": 0,
        "DIRECT_CHARGING": 0,
        "FEWER_BATTERY_BREAKDOWNS": 1250,
        "LESS_IDLING": 489881,
      },
      "subsidyCents": 0,
      "tenYearNetGainCents": 4335871,
      "yearlySolarEnergyKwh": 2114.1458460000003,
    },
  },
}
`;

exports[`golden calculation cases 1 refrigerated trailer with a diesel cooling unit, regional, Madrid, roof 1`] = `
{
  "assumptionSetVersion": "2026.1",
  "formulaVersion": "1.0.0",
  "inputSources": {
    "averageDailyDistanceKm": "PROVIDED",
    "cargoType": "PROVIDED",
    "coolingUnitType": "PROVIDED",
    "countryCode": "PROVIDED",
    "energyConsumptionKwhPer100km": "PRESET",
    "engineType": "PROVIDED",
    "idleHoursPerDay": "PRESET",
    "latitude": "PROVIDED",
    "longitude": "PROVIDED",
    "maxRoofLoadKg": "PRESET",
    "operatingMonthsPerYear": "PROVIDED",
    "parkingType": "PROVIDED",
    "payloadReserveKg": "PRESET",
    "quantity": "PROVIDED",
    "solarPanelCapacityKw": "PRESET",
    "solarPanelPlacement": "PROVIDED",
    "vehicleType": "PROVIDED",
    "winterUsage": "PROVIDED",
  },
  "scenarios": {
    "OPTIMISTIC": {
      "annualMaintenanceCents": 9000,
      "annualSavingsCents": 562709,
      "co2AvoidedKgPerYear": 9383.981118882535,
      "cumulativeSavingsSeriesCents": [
        -1080000,
        -526291,
        25744,
        608110,
        1156813,
        1703857,
        2281247,
        2824989,
        3335087,
        3907546,
        4446371,
      ],
      "energy": {
        "auxiliaryKwh": 0,
        "coolingKwh": 7425.03431544,
        "directChargingKwh": 0,
        "idlingKwh": 0,
        "producedKwh": 7425.03431544,
        "wastedKwh": 0,
      },
      "kind": "OPTIMISTIC",
      "oneTimeCostAfterSubsidyCents": 1080000,
      "oneTimeCostBeforeSubsidyCents": 1080000,
      "paybackMonths": 23.440383309029322,
      "resolvedInput": {
        "averageDailyDistanceKm": 150,
        "cargoType": "CHILLED",
        "coolingUnitType": "DIESEL",
        "countryCode": "ES",
        "energyConsumptionKwhPer100km": 0,
        "engineType": "DIESEL",
        "idleHoursPerDay": 0,
        "latitude": 40.4168,
        "longitude": -3.7038,
        "maxRoofLoadKg": 800,
        "operatingMonthsPerYear": 12,
        "parkingType": "MIXED",
        "payloadReserveKg": 450,
        "quantity": 1,
        "solarPanelCapacityKw": 6,
        "solarPanelPlacement": "ROOF",
        "vehicleType": "TRAILER",
        "winterUsage": true,
      },
      "savingsByTypeCents": {
        "ALTERNATOR_FUEL": 0,
        "COOLING_UNIT_FUEL": 557909,
        "DIRECT_CHARGING": 0,
        "FEWER_BATTERY_BREAKDOWNS": 4800,
        "LESS_IDLING": 0,
      },
      "subsidyCents": 0,
      "tenYearNetGainCents": 4446371,
      "yearlySolarEnergyKwh": 7425.03431544,
    },
    "PESSIMISTIC": {
      "annualMaintenanceCents": 18000,
      "annualSavingsCents": 105522,
      "co2AvoidedKgPerYear": 2481.4154602501435,
      "cumulativeSavingsSeriesCents": [
        -1050000,
        -962478,
        -875800,
        -789959,
        -704949,
        -620763,
        -537394,
        -454836,
        -373083,
        -292128,
        -211965,
      ],
      "energy": {
        "auxiliaryKwh": 0,
        "coolingKwh": 2714.124494399999,
        "directChargingKwh": 0,
        "idlingKwh": 0,
        "producedKwh": 2714.124494399999,
        "wastedKwh": 0,
      },
      "kind": "PESSIMISTIC",
      "oneTimeCostAfterSubsidyCents": 1050000,
      "oneTimeCostBeforeSubsidyCents": 1050000,
      "paybackMonths": 152.32441600493408,
      "resolvedInput": {
        "averageDailyDistanceKm": 150,
        "cargoType": "CHILLED",
        "coolingUnitType": "DIESEL",
        "countryCode": "ES",
        "energyConsumptionKwhPer100km": 0,
        "engineType": "DIESEL",
        "idleHoursPerDay": 0,
        "latitude": 40.4168,
        "longitude": -3.7038,
        "maxRoofLoadKg": 300,
        "operatingMonthsPerYear": 12,
        "parkingType": "MIXED",
        "payloadReserveKg": 150,
        "quantity": 1,
        "solarPanelCapacityKw": 3,
        "solarPanelPlacement": "ROOF",
        "vehicleType": "TRAILER",
        "winterUsage": true,
      },
      "savingsByTypeCents": {
        "ALTERNATOR_FUEL": 0,
        "COOLING_UNIT_FUEL": 105522,
        "DIRECT_CHARGING": 0,
        "FEWER_BATTERY_BREAKDOWNS": 0,
        "LESS_IDLING": 0,
      },
      "subsidyCents": 0,
      "tenYearNetGainCents": -211965,
      "yearlySolarEnergyKwh": 2714.124494399999,
    },
    "REALISTIC": {
      "annualMaintenanceCents": 13500,
      "annualSavingsCents": 254781,
      "co2AvoidedKgPerYear": 5163.169881191401,
      "cumulativeSavingsSeriesCents": [
        -1125000,
        -883719,
        -643706,
        -404954,
        -147457,
        88791,
        303797,
        537567,
        790106,
        1021422,
        1251520,
      ],
      "energy": {
        "auxiliaryKwh": 0,
        "coolingKwh": 4923.353340000001,
        "directChargingKwh": 0,
        "idlingKwh": 0,
        "producedKwh": 4923.353340000001,
        "wastedKwh": 0,
      },
      "kind": "REALISTIC",
      "oneTimeCostAfterSubsidyCents": 1125000,
      "oneTimeCostBeforeSubsidyCents": 1125000,
      "paybackMonths": 55.48994277200231,
      "resolvedInput": {
        "averageDailyDistanceKm": 150,
        "cargoType": "CHILLED",
        "coolingUnitType": "DIESEL",
        "countryCode": "ES",
        "energyConsumptionKwhPer100km": 0,
        "engineType": "DIESEL",
        "idleHoursPerDay": 0,
        "latitude": 40.4168,
        "longitude": -3.7038,
        "maxRoofLoadKg": 500,
        "operatingMonthsPerYear": 12,
        "parkingType": "MIXED",
        "payloadReserveKg": 300,
        "quantity": 1,
        "solarPanelCapacityKw": 4.5,
        "solarPanelPlacement": "ROOF",
        "vehicleType": "TRAILER",
        "winterUsage": true,
      },
      "savingsByTypeCents": {
        "ALTERNATOR_FUEL": 0,
        "COOLING_UNIT_FUEL": 253531,
        "DIRECT_CHARGING": 0,
        "FEWER_BATTERY_BREAKDOWNS": 1250,
        "LESS_IDLING": 0,
      },
      "subsidyCents": 0,
      "tenYearNetGainCents": 1251520,
      "yearlySolarEnergyKwh": 4923.353340000001,
    },
  },
}
`;

exports[`golden calculation cases 10 vans, regional, Seville, roof, custom subsidy 1`] = `
{
  "assumptionSetVersion": "2026.1",
  "formulaVersion": "1.0.0",
  "inputSources": {
    "averageDailyDistanceKm": "PROVIDED",
    "cargoType": "PROVIDED",
    "countryCode": "PROVIDED",
    "energyConsumptionKwhPer100km": "PRESET",
    "engineType": "PROVIDED",
    "idleHoursPerDay": "PRESET",
    "latitude": "PROVIDED",
    "longitude": "PROVIDED",
    "maxRoofLoadKg": "PRESET",
    "operatingMonthsPerYear": "PROVIDED",
    "parkingType": "PROVIDED",
    "payloadReserveKg": "PRESET",
    "quantity": "PROVIDED",
    "solarPanelCapacityKw": "PRESET",
    "solarPanelPlacement": "PROVIDED",
    "subsidyOverrideCents": "PROVIDED",
    "vehicleType": "PROVIDED",
    "winterUsage": "PROVIDED",
  },
  "scenarios": {
    "OPTIMISTIC": {
      "annualMaintenanceCents": 22500,
      "annualSavingsCents": 1007899,
      "co2AvoidedKgPerYear": 16145.42825,
      "cumulativeSavingsSeriesCents": [
        -2100000,
        -1114601,
        -129202,
        1176197,
        2161596,
        3146995,
        4452394,
        5437793,
        6103192,
        7408591,
        8393990,
      ],
      "energy": {
        "auxiliaryKwh": 12775,
        "coolingKwh": 0,
        "directChargingKwh": 0,
        "idlingKwh": 0,
        "producedKwh": 19445.88307095,
        "wastedKwh": 6670.883070950002,
      },
      "kind": "OPTIMISTIC",
      "oneTimeCostAfterSubsidyCents": 2100000,
      "oneTimeCostBeforeSubsidyCents": 2700000,
      "paybackMonths": 25.18770123157747,
      "resolvedInput": {
        "averageDailyDistanceKm": 150,
        "cargoType": "REGULAR",
        "coolingUnitType": undefined,
        "countryCode": "ES",
        "energyConsumptionKwhPer100km": 36,
        "engineType": "DIESEL",
        "idleHoursPerDay": 0,
        "latitude": 37.3891,
        "longitude": -5.9845,
        "maxRoofLoadKg": 200,
        "operatingMonthsPerYear": 12,
        "parkingType": "MIXED",
        "payloadReserveKg": 150,
        "quantity": 10,
        "solarPanelCapacityKw": 1.5,
        "solarPanelPlacement": "ROOF",
        "subsidyOverrideCents": 600000,
        "vehicleType": "VAN",
        "winterUsage": true,
      },
      "savingsByTypeCents": {
        "ALTERNATOR_FUEL": 959899,
        "COOLING_UNIT_FUEL": 0,
        "DIRECT_CHARGING": 0,
        "FEWER_BATTERY_BREAKDOWNS": 48000,
        "LESS_IDLING": 0,
      },
      "subsidyCents": 600000,
      "tenYearNetGainCents": 8393990,
      "yearlySolarEnergyKwh": 19445.88307095,
    },
    "PESSIMISTIC": {
      "annualMaintenanceCents": 48000,
      "annualSavingsCents": 212863,
      "co2AvoidedKgPerYear": 5005.5735,
      "cumulativeSavingsSeriesCents": [
        -2200000,
        -2035137,
        -1870274,
        -1705411,
        -1540548,
        -1375685,
        -1210822,
        -1045959,
        -881096,
        -716233,
        -551370,
      ],
      "energy": {
        "auxiliaryKwh": 5475,
        "coolingKwh": 0,
        "directChargingKwh": 0,
        "idlingKwh": 0,
        "producedKwh": 7666.8706367999985,
        "wastedKwh": 2191.8706367999985,
      },
      "kind": "PESSIMISTIC",
      "oneTimeCostAfterSubsidyCents": 2200000,
      "oneTimeCostBeforeSubsidyCents": 2800000,
      "paybackMonths": 160.1329588810103,
      "resolvedInput": {
        "averageDailyDistanceKm": 150,
        "cargoType": "REGULAR",
        "coolingUnitType": undefined,
        "countryCode": "ES",
        "energyConsumptionKwhPer100km": 22,
        "engineType": "DIESEL",
        "idleHoursPerDay": 0,
        "latitude": 37.3891,
        "longitude": -5.9845,
        "maxRoofLoadKg": 100,
        "operatingMonthsPerYear": 12,
        "parkingType": "MIXED",
        "payloadReserveKg": 50,
        "quantity": 10,
        "solarPanelCapacityKw": 0.8,
        "solarPanelPlacement": "ROOF",
        "subsidyOverrideCents": 600000,
        "vehicleType": "VAN",
        "winterUsage": true,
      },
      "savingsByTypeCents": {
        "ALTERNATOR_FUEL": 212863,
        "COOLING_UNIT_FUEL": 0,
        "DIRECT_CHARGING": 0,
        "FEWER_BATTERY_BREAKDOWNS": 0,
        "LESS_IDLING": 0,
      },
      "subsidyCents": 600000,
      "tenYearNetGainCents": -551370,
      "yearlySolarEnergyKwh": 7666.8706367999985,
    },
    "REALISTIC": {
      "annualMaintenanceCents": 36000,
      "annualSavingsCents": 463601,
      "co2AvoidedKgPerYear": 9186.6996,
      "cumulativeSavingsSeriesCents": [
        -2400000,
        -1972399,
        -1544798,
        -1117197,
        -489596,
        -61995,
        165606,
        593207,
        1220808,
        1648409,
        2076010,
      ],
      "energy": {
        "auxiliaryKwh": 8760,
        "coolingKwh": 0,
        "directChargingKwh": 0,
        "idlingKwh": 0,
        "producedKwh": 13828.830705,
        "wastedKwh": 5068.830705,
      },
      "kind": "REALISTIC",
      "oneTimeCostAfterSubsidyCents": 2400000,
      "oneTimeCostBeforeSubsidyCents": 3000000,
      "paybackMonths": 63.26861481276444,
      "resolvedInput": {
        "averageDailyDistanceKm": 150,
        "cargoType": "REGULAR",
        "coolingUnitType": undefined,
        "countryCode": "ES",
        "energyConsumptionKwhPer100km": 28,
        "engineType": "DIESEL",
        "idleHoursPerDay": 0,
        "latitude": 37.3891,
        "longitude": -5.9845,
        "maxRoofLoadKg": 150,
        "operatingMonthsPerYear": 12,
        "parkingType": "MIXED",
        "payloadReserveKg": 100,
        "quantity": 10,
        "solarPanelCapacityKw": 1.2,
        "solarPanelPlacement": "ROOF",
        "subsidyOverrideCents": 600000,
        "vehicleType": "VAN",
        "winterUsage": true,
      },
      "savingsByTypeCents": {
        "ALTERNATOR_FUEL": 451101,
        "COOLING_UNIT_FUEL": 0,
        "DIRECT_CHARGING": 0,
        "FEWER_BATTERY_BREAKDOWNS": 12500,
        "LESS_IDLING": 0,
      },
      "subsidyCents": 600000,
      "tenYearNetGainCents": 2076010,
      "yearlySolarEnergyKwh": 13828.830705,
    },
  },
}
`;
